--- a/visualization.html
+++ b/visualization.html
@@ -164,7 +164,7 @@
       }
       var x = document.getElementById("selectElementId").value;
       if (x != "") {
-        d3.json("./output/25/" + x, draw);
+        d3.json("./output/march_1st/" + x, draw);
       }
       
     }
