add a pie chart of SWEET concepts

--- a/hw2/visualization/sweet-sortable-bar-chart.html
+++ b/hw2/visualization/sweet-sortable-bar-chart.html
@@ -68,7 +68,7 @@ label {
 <label><input type="checkbox"> Sort values</label>
 <script src="./d3.v3.min.js"></script>
 <script src="./d3.tip.v0.6.3.js"></script>
-
+<h1>Filename: SWEET concept numbers in a Sortable Bar Chart</h1>
 <script>
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
