--- a/hw2/visualization/movie-data-size-sortable-bar-chart.html
+++ b/hw2/visualization/movie-data-size-sortable-bar-chart.html
@@ -68,7 +68,7 @@ label {
 <label><input type="checkbox"> Sort values</label>
 <script src="./d3.v3.min.js"></script>
 <script src="./d3.tip.v0.6.3.js"></script>
-
+<h1>MP4 Filename: Movie Data Size</h1>
 <script>
 
 var margin = {top: 20, right: 20, bottom: 30, left: 40},
